# heart-disease-mlops

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/: workflows
.github/workflows/: ci.yml  ml-pipeline.yml
configs/: train_config.yaml
data/combined/: .gitignore  heart_reference.csv.dvc
data/production/: .gitignore  heart_production.csv.dvc
data/raw/: heart.csv.dvc
docs/: drift_analysis.md
mlruns/0/: meta.yaml
mlruns/0/524ed7a077f0453aae0305c23ddc2d52/: meta.yaml
mlruns/0/524ed7a077f0453aae0305c23ddc2d52/metrics/: eval_accuracy  eval_f1  eval_precision  eval_recall
mlruns/0/524ed7a077f0453aae0305c23ddc2d52/tags/: mlflow.source.name
mlruns/934603281257187066/: meta.yaml
mlruns/934603281257187066/12662800ac944e39ac325ae696b81def/: meta.yaml
mlruns/934603281257187066/12662800ac944e39ac325ae696b81def/tags/: mlflow.runName
mlruns/934603281257187066/7a61cc80f4424da7b343056b6b9bf08f/: meta.yaml
mlruns/934603281257187066/7a61cc80f4424da7b343056b6b9bf08f/metrics/: accuracy  f1  precision  recall
mlruns/934603281257187066/7a61cc80f4424da7b343056b6b9bf08f/params/: data_version
mlruns/934603281257187066/7a61cc80f4424da7b343056b6b9bf08f/tags/: mlflow.log-model.history  (+3 more)
reports/: drift_report.html
src/: drift_monitor.py  evaluate.py  monitor_drift.py  train.py
src/heart_disease_mlops/: combine_datasets.py  compare_experiments.py  create_raw_heart_csv.py  data.py  features.py  generate_production_data.py  train.py
tests/: test_data_validation.py  test_model_validation.py  test_preprocessing.py
(+5 files in other folders)
