[project]
name = "heart_disease_mlops"
version = "0.1.0"
description = "Heart disease MLOps pipeline"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
