[project]
name = "heart_disease_mlops"
version = "0.1.0"
description = "Heart disease MLOps pipeline"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {where = ["src"]}

[tool.setuptools.package-data]
heart_disease_mlops = ["*.yaml", "*.csv", "*.json"]


